feat(summaries): add opencode agent and worktree preflight

--- a/gui/menu.html
+++ b/gui/menu.html
@@ -1317,7 +1317,7 @@
                     <label class="settings-label">Summaries Agent</label>
                     <div id="summariesAgentDropdown" class="custom-dropdown-wrapper"></div>
                     <small class="text-muted d-block mt-1">
-                      Select which agent generates summaries. Amp is free and recommended if installed.
+                      Select which agent generates summaries.
                     </small>
                   </div>
 
