--- a/gui/boot.html
+++ b/gui/boot.html
@@ -242,7 +242,7 @@ const {
         $("#tiny-text").fadeIn()
     });
     $(function () {
-        $('#version').text('Beta Version ' + remote.getGlobal('app_version'));
+        $('#version').text('Version ' + remote.getGlobal('app_version'));
     }
 
     );
