--- a/gui/menu.html
+++ b/gui/menu.html
@@ -214,6 +214,14 @@
                           >
                             <i class="fas fa-image"></i> Attach Image
                           </button>
+                          <button
+                            type="button"
+                            class="mic-button"
+                            id="promptMicBtn"
+                            title="Voice input (requires Codex auth)"
+                          >
+                            <i class="fas fa-microphone"></i>
+                          </button>
                           <span class="attachment-hint text-muted ml-2">
                             or paste from clipboard
                           </span>
