feat(command-center): add frontend JavaScript module
Add Command Center JavaScript module that:
- Manages state (data, config, refresh interval, visibility)
- Handles page visibility via PhantomNavigate events
- Fetches data from backend via Tauri invoke
- Renders Linear issues, Sentry errors, and CI status panels
- Manages auto-refresh based on configurable interval
- Handles quick actions (fixTopError, startNextIssue, rerunFailedCI)
- Opens agent popup for creating tasks from errors/issues
- Provides utility functions for time formatting, HTML escaping, etc.

--- a/gui/menu.html
+++ b/gui/menu.html
@@ -2087,6 +2087,7 @@
     <script src="js/slash-commands.js"></script>
     <script src="js/custom-dropdown.js"></script>
     <script src="js/review.js"></script>
+    <script src="js/command-center.js"></script>
     <script src="js/application.js"></script>
 
     <script src="js/vendor/jquery.color-2.1.2.min.js"></script>
