--- a/gui/menu.html
+++ b/gui/menu.html
@@ -2040,6 +2040,187 @@
       </div>
     </div>
 
+    <!-- Command Center Configuration Modal -->
+    <div class="modal fade" id="commandCenterConfigModal" tabindex="-1" role="dialog" aria-labelledby="commandCenterConfigModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content bg-dark text-light">
+          <div class="modal-header">
+            <h5 class="modal-title" id="commandCenterConfigModalLabel">
+              <i class="fal fa-cog"></i> Command Center Configuration
+            </h5>
+            <button type="button" class="close text-light" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true"><i class="fal fa-times"></i></span>
+            </button>
+          </div>
+          <div class="modal-body p-0">
+            <!-- Tabs -->
+            <ul class="nav nav-tabs cc-config-tabs" role="tablist">
+              <li class="nav-item">
+                <a class="nav-link active" id="ccTabGithub" data-toggle="tab" href="#ccPaneGithub" role="tab">
+                  <i class="fab fa-github"></i> GitHub
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" id="ccTabLinear" data-toggle="tab" href="#ccPaneLinear" role="tab">
+                  <i class="fab fa-linear"></i> Linear
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" id="ccTabSentry" data-toggle="tab" href="#ccPaneSentry" role="tab">
+                  <i class="fal fa-bug"></i> Sentry
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" id="ccTabGeneral" data-toggle="tab" href="#ccPaneGeneral" role="tab">
+                  <i class="fal fa-sliders-h"></i> General
+                </a>
+              </li>
+            </ul>
+
+            <!-- Tab Content -->
+            <div class="tab-content cc-config-content">
+              <!-- GitHub Tab -->
+              <div class="tab-pane fade show active" id="ccPaneGithub" role="tabpanel">
+                <div class="cc-section">
+                  <h6 class="cc-section-title">Authentication Method</h6>
+                  <div class="cc-radio-group">
+                    <label class="cc-radio-label">
+                      <input type="radio" name="ghAuthMethod" value="gh-cli" checked>
+                      <span class="cc-radio-text">
+                        <strong>GitHub CLI (gh)</strong>
+                        <small>Use existing gh CLI authentication</small>
+                      </span>
+                    </label>
+                    <label class="cc-radio-label">
+                      <input type="radio" name="ghAuthMethod" value="token">
+                      <span class="cc-radio-text">
+                        <strong>Personal Access Token</strong>
+                        <small>Use a GitHub PAT with repo scope</small>
+                      </span>
+                    </label>
+                  </div>
+
+                  <!-- gh CLI Status -->
+                  <div id="ccGhCliSection" class="cc-auth-section">
+                    <div class="cc-status-row">
+                      <span class="cc-label">Status:</span>
+                      <span id="ccGhCliStatus" class="cc-status">
+                        <i class="fal fa-spinner fa-spin"></i> Checking...
+                      </span>
+                    </div>
+                  </div>
+
+                  <!-- Token Input -->
+                  <div id="ccGhTokenSection" class="cc-auth-section" style="display: none;">
+                    <div class="form-group">
+                      <label class="cc-label">Personal Access Token</label>
+                      <input type="password" class="form-control form-control-sm bg-dark text-light" id="ccGithubToken" placeholder="ghp_xxxxxxxxxxxx">
+                      <small class="form-text text-muted">Token needs <code>repo</code> scope for accessing issues and workflows</small>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="cc-section">
+                  <h6 class="cc-section-title">Watched Repositories</h6>
+                  <div class="cc-input-group">
+                    <input type="text" class="form-control form-control-sm bg-dark text-light" id="ccGithubRepoInput" placeholder="owner/repo">
+                    <button type="button" class="btn btn-sm btn-outline-primary" id="ccAddGithubRepoBtn">
+                      <i class="fal fa-plus"></i> Add
+                    </button>
+                  </div>
+                  <div id="ccGithubReposList" class="cc-repos-list">
+                    <div class="cc-empty-list">No repositories added</div>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Linear Tab -->
+              <div class="tab-pane fade" id="ccPaneLinear" role="tabpanel">
+                <div class="cc-section">
+                  <h6 class="cc-section-title">Authentication</h6>
+                  <div class="form-group">
+                    <label class="cc-label">API Key</label>
+                    <input type="password" class="form-control form-control-sm bg-dark text-light" id="ccLinearToken" placeholder="lin_api_xxxxxxxxxxxx">
+                    <small class="form-text text-muted">Generate an API key at <a href="https://linear.app/settings/api" target="_blank" class="text-info">linear.app/settings/api</a></small>
+                  </div>
+                </div>
+
+                <div class="cc-section">
+                  <h6 class="cc-section-title">Watched Projects</h6>
+                  <button type="button" class="btn btn-sm btn-outline-primary mb-2" id="ccLoadLinearProjectsBtn">
+                    <i class="fal fa-sync-alt"></i> Load Projects
+                  </button>
+                  <div id="ccLinearProjectsList" class="cc-checkbox-list">
+                    <div class="cc-empty-list">Enter API key and click Load Projects</div>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Sentry Tab -->
+              <div class="tab-pane fade" id="ccPaneSentry" role="tabpanel">
+                <div class="cc-section">
+                  <h6 class="cc-section-title">Authentication</h6>
+                  <div class="form-group">
+                    <label class="cc-label">Auth Token</label>
+                    <input type="password" class="form-control form-control-sm bg-dark text-light" id="ccSentryToken" placeholder="sntrys_xxxxxxxxxxxx">
+                    <small class="form-text text-muted">Generate a token at <a href="https://sentry.io/settings/auth-tokens/" target="_blank" class="text-info">sentry.io/settings/auth-tokens</a></small>
+                  </div>
+                </div>
+
+                <div class="cc-section">
+                  <h6 class="cc-section-title">Organization</h6>
+                  <div class="cc-input-group">
+                    <select class="form-control form-control-sm bg-dark text-light" id="ccSentryOrg">
+                      <option value="">Select an organization...</option>
+                    </select>
+                    <button type="button" class="btn btn-sm btn-outline-primary" id="ccLoadSentryOrgsBtn">
+                      <i class="fal fa-sync-alt"></i> Load Organizations
+                    </button>
+                  </div>
+                </div>
+
+                <div class="cc-section">
+                  <h6 class="cc-section-title">Watched Projects</h6>
+                  <div id="ccSentryProjectsList" class="cc-checkbox-list">
+                    <div class="cc-empty-list">Select an organization to load projects</div>
+                  </div>
+                </div>
+              </div>
+
+              <!-- General Tab -->
+              <div class="tab-pane fade" id="ccPaneGeneral" role="tabpanel">
+                <div class="cc-section">
+                  <h6 class="cc-section-title">Command Center</h6>
+                  <div class="cc-toggle-row">
+                    <label class="cc-toggle-label">
+                      <span class="cc-toggle-text">Enable Command Center</span>
+                      <input type="checkbox" id="ccEnabledToggle" checked>
+                      <span class="cc-toggle-slider"></span>
+                    </label>
+                  </div>
+                </div>
+
+                <div class="cc-section">
+                  <h6 class="cc-section-title">Auto-Refresh Interval</h6>
+                  <div class="cc-slider-row">
+                    <input type="range" class="cc-slider" id="ccRefreshInterval" min="1" max="60" value="15">
+                    <span class="cc-slider-value" id="ccRefreshIntervalValue">15 min</span>
+                  </div>
+                  <small class="form-text text-muted">How often to refresh data from integrations</small>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-sm btn-secondary" id="ccConfigCancelBtn" data-dismiss="modal">Cancel</button>
+            <button type="button" class="btn btn-sm btn-primary" id="ccConfigSaveBtn">
+              <i class="fal fa-save"></i> Save
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!--Universal Footer-->
     <footer class="footer">
       <div class="container-fluid">
@@ -2088,6 +2269,7 @@
     <script src="js/custom-dropdown.js"></script>
     <script src="js/review.js"></script>
     <script src="js/command-center.js"></script>
+    <script src="js/command-center-config.js"></script>
     <script src="js/application.js"></script>
 
     <script src="js/vendor/jquery.color-2.1.2.min.js"></script>
